<resources>
    <string name="app_name" translatable="false">SplitTimer</string>

    <string name="action_settings">Settings</string>
    <string name="action_clear_data">Clear data</string>

    <string name="start_timing">Start timing</string>
    <string name="timing_title">Timing</string>

    <string name="event_title">Events</string>
    <string name="event_empty_list">No events</string>
    <string name="event_type">{0,choice, 1#Fixed interval start, 2#Relative interval start,
        3#Mass start}</string>
    <string name="event_select">Select event</string>
    <string name="event_save">Save</string>
    <string name="event_add">Add new</string>
    <string name="event_edit">Edit current</string>
    <string name="event_cancel">Cancel</string>


    <string name="startlist_title">Startlist</string>
    <string name="startlist_time">Start offset</string>
    <string name="startlist_name">Name</string>
    <string name="startlist_number">Number</string>
    <string name="startlist_add">Add</string>

    <string name="timingpoint_title">Timingpoints</string>

    <string name="pref_precision_key" translatable="false">timingprecision</string>
    <string name="pref_precision_default" translatable="false">1</string>
    <string name="pref_resolution_key" translatable="false">timingresolution</string>
    <string name="pref_resolution_default" translatable="false">@string/pref_resolution_minutes_value</string>
    <string name="pref_precision_description">Timing precision</string>
    <string name="pref_resolution_description">Timing resolution</string>
    <string name="pref_precision_hour">Hour</string>
    <string name="pref_precision_minute">Minute</string>
    <string name="pref_precision_second">1s</string>
    <string name="pref_precision_decisecond">1/10s</string>
    <string name="pref_precision_centisecond">1/100s</string>
    <string name="pref_precision_millisecond">1/1000s</string>
    <string name="pref_precision_hour_value">3600</string>
    <string name="pref_precision_minute_value">60</string>
    <string name="pref_precision_second_value">1</string>
    <string name="pref_precision_decisecond_value">10</string>
    <string name="pref_precision_centisecond_value">100</string>
    <string name="pref_precision_millisecond_value">1000</string>
    <string name="pref_resolution_seconds">Seconds</string>
    <string name="pref_resolution_minutes">Minute</string>
    <string name="pref_resolution_hours">Hour</string>
    <string name="pref_resolution_seconds_value" translatable="false">ss</string>
    <string name="pref_resolution_minutes_value" translatable="false">mm</string>
    <string name="pref_resolution_hours_value" translatable="false">hh:mm</string>

    <string name="empty_list">No entries</string>
</resources>