<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_resolution_key"
        android:title="@string/pref_resolution_description"
        android:dialogTitle="@string/pref_resolution_description"
        android:summary="%s"
        android:defaultValue="@string/pref_resolution_default"
        android:entries="@array/pref_resolution_entries"
        android:entryValues="@array/pref_resolution_values"/>
    <ListPreference
        android:key="@string/pref_precision_key"
        android:title="@string/pref_precision_description"
        android:dialogTitle="@string/pref_precision_description"
        android:summary="%s"
        android:defaultValue="@string/pref_precision_default"
        android:entries="@array/pref_precision_entries"
        android:entryValues="@array/pref_precision_values"/>
</PreferenceScreen>