<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="org.asbjorjo.splittimer.fragment.StartlistEditFragment">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/startlist_input"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/startlist_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/startlist_name"/>

        <EditText
            android:id="@+id/startlist_input_number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/startlist_input_name"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/startlist_number"/>

        <EditText
            android:id="@+id/startlist_input_starttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/startlist_input_name"
            android:layout_toEndOf="@id/startlist_input_number"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/startlist_time"/>

    </RelativeLayout>

    <Button
        android:id="@+id/startlist_input_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startlist_input"
        android:text="@string/startlist_add"/>
</RelativeLayout>
