<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="org.asbjorjo.splittimer.activity.MainActivity">

    <FrameLayout
        android:id="@+id/event_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/main_button_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_select"
        android:onClick="onClick"
        android:text="@string/event_title"/>
    <Button
        android:id="@+id/main_button_intermediate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_below="@id/main_button_event"
        android:enabled="false"
        android:text="@string/timingpoint_title"/>
    <Button
        android:id="@+id/main_button_startlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_below="@id/main_button_intermediate"
        android:enabled="false"
        android:text="@string/startlist_title"/>
    <Button
        android:id="@+id/main_button_timing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_below="@id/main_button_startlist"
        android:enabled="false"
        android:text="@string/start_timing"/>
</RelativeLayout>
